# KZXTFZ

./: CMakeLists.txt  README.md  geometry_practice.cpp  validation.cpp
t1/: CMakeLists.txt
t2/: CMakeLists.txt
t2/doc/: hello.txt
t2/src/: CMakeLists.txt  main.c
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c  hello.h
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt  main.c
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
t6/: CMakeLists.txt
t6/cmake/: FindHELLO.cmake
t6/src/: CMakeLists.txt  main.c
